<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:padding="24dp"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/tvRegTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_registrarse"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombreReg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/edit_text"
        android:hint="Nombre Completo"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/tvRegTitle" />

    <TextView
        android:id="@+id/tvLabelEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selecciona tu equipo:"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreReg"/>

    <Spinner
        android:id="@+id/spEquipoReg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelEquipo" />

    <EditText
        android:id="@+id/etEmailReg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/spEquipoReg" />

    <EditText
        android:id="@+id/etPassReg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/etEmailReg" />

    <Button
        android:id="@+id/btnDoRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary_dark"
        android:text="Confirmar Registro"
        app:layout_constraintTop_toBottomOf="@+id/etPassReg" />

    <TextView
        android:id="@+id/tvGoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="¿Ya tienes cuenta? Vuelve al Login"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDoRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>